--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #D4D9DD url("images/bg01.jpg");
+		background: #D4D9DD url("");
 		color: #474f51;
 		font-size: 13.5pt;
 		font-family: 'Yanone Kaffeesatz';
@@ -1453,7 +1453,7 @@ input, select, textarea {
 
 	.bordered-feature-image {
 		display: block;
-		background: #fff url("images/bg04.png");
+		background: #fff url("../images/bg04.png");
 		padding: 10px;
 		box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.15);
 		margin: 0 0 1.5em 0;
@@ -1504,11 +1504,14 @@ input, select, textarea {
 		}
 
 /* Header */
+#hero-bg {
+	background: #3B4346 url("../images/bg01.jpg");
+  }
+
 
 	#header {
 		position: relative;
-		background: #3B4346 url("images/bg01.jpg");
-		border-bottom: solid 0px #272d30; */ 
+		border-bottom: solid 0px #272d30; */
 		box-shadow: inset 0px -1px 0px 0px #51575a !important;
 		text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
 	}
@@ -1517,6 +1520,7 @@ input, select, textarea {
 			position: relative;
 			min-height: 155px;
 		}
+
 
 		#header h1 {
 			position: absolute;
@@ -1538,7 +1542,7 @@ input, select, textarea {
 		}
 
 			#header nav a {
-				color: #c6c8c8;
+				color:rgb(198, 200, 200);
 				text-decoration: none;
 				font-size: 1.4em;
 				margin-left: 60px;
@@ -1578,12 +1582,12 @@ input, select, textarea {
 /* Features */
 
 	#features {
-		background: #353D40 url("images/bg02.jpg");
+		background: #353D40 url("../images/bg02.jpg");
 		border-bottom: solid 1px #272e31;
 		padding: 45px 0 45px 0;
 		text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
 		color: #a0a8ab;
-        
+
 	}
 
 		#features h2 {
@@ -1603,7 +1607,7 @@ input, select, textarea {
 /* Content */
 
 	#content {
-		background: #f7f7f7 url("images/bg04.png");
+		background: #f7f7f7 url("../images/bg04.png");
 		border-top: solid 1px #fff;
 		padding: 45px 0 45px 0;
 	}
@@ -1655,7 +1659,7 @@ input, select, textarea {
 		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
 	}
     div#footer {
-        background: #D4D9DD url(images/bg03.jpg);
+        background: #D4D9DD url(../images/bg03.jpg);
     }
 
 		#footer h2 {
@@ -1698,7 +1702,7 @@ input, select, textarea {
 			color: #8d9ca3;
 		}
         div#copyright {
-            background: #D4D9DD url(images/bg03.jpg);
+            background: #D4D9DD url(../images/bg03.jpg);
         }
 
 /* Large */
@@ -1837,7 +1841,7 @@ input, select, textarea {
 				width: 100%;
 				z-index: 10001;
 				color: #fff;
-				background: url("images/bg04.jpg");
+				background: url("../images/bg04.jpg");
 				box-shadow: inset 0px -20px 70px 0px rgba(200, 220, 245, 0.1), inset 0px -1px 0px 0px rgba(255, 255, 255, 0.1), 0px 1px 7px 0px rgba(0, 0, 0, 0.6);
 				text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.75);
 			}
@@ -1910,7 +1914,7 @@ input, select, textarea {
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				background: url("images/bg04.jpg");
+				background: url("../images/bg04.jpg");
 				box-shadow: inset -1px 0px 0px 0px rgba(255, 255, 255, 0.25), inset -2px 0px 25px 0px rgba(0, 0, 0, 0.5);
 				text-shadow: -1px -1px 1px black;
 			}
