--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1426,7 +1426,7 @@ input, select, textarea {
 	.check-list li {
 		padding: 0.7em 0 0.7em 45px;
 		font-size: 1.2em;
-		background: url("images/icon-checkmark.png") 0px 1.05em no-repeat;
+		background: url("../images/icon-checkmark.png") 0px 1.05em no-repeat;
 	}
 
 		.check-list li:first-child {
